# nmi-finder

./: 203211.txt  MANIFEST.in  README.md  aemo.json  aemo_part2.csv  aeomi.csv  check_ranges.py  combined_aemo.json  nmi_checker.ipynb  nmi_class.py  nmi_mirn.csv  pyproject.toml  requirements.txt  setup.py  test.ipynb
nmi_checker/: __init__.py  nmi_class.py  separated_data.json
