requires = ["setuptools", "wheel"]

[tool.poetry]
name = "nmi-checker"
version = "5.1.0"
description = "This package takes text as an input and checks for NMI in that text"
authors = ["Akhlaq Ahmed engr.akhlaq@hotmail.com"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
include = ["seperated_data.json"]

[tool.poetry.packages]
name = "nmi_checker"
include = ["MANIFEST.in"]
